adjusting asset grid on desktop view and fixing menu spacing on mobie

--- a/components/common/asset/asset-grid.module.css
+++ b/components/common/asset/asset-grid.module.css
@@ -15,7 +15,7 @@
 
 .grid-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(215px, 1fr));
+  grid-template-columns: repeat(5, minmax(215px, 1fr));
   grid-gap: 2rem;
 }
 
